Главная страница блога - фикс цветов иконок

--- a/blog.html
+++ b/blog.html
@@ -199,19 +199,19 @@
       </section>
       <section class="blog_categories section wrapper--global">
         <ul class="blog_categories__list">
-          <li class="blog_categories__list__item blog_categories__list__item--active icon--tiles">
+          <li class="blog_categories__list__item blog_categories__list__item--active icon--tiles-black">
             <span class="blog_categories__list__item__text">Все</span>
           </li>
-          <li class="blog_categories__list__item blog_categories__list__item--inactive icon--search">
+          <li class="blog_categories__list__item blog_categories__list__item--inactive icon--search-black">
             <a class="blog_categories__list__item__link" href="#">Обзор</a>
           </li>
-          <li class="blog_categories__list__item blog_categories__list__item--inactive icon--navigator">
+          <li class="blog_categories__list__item blog_categories__list__item--inactive icon--navigator-black">
             <a class="blog_categories__list__item__link" href="#">Инструкция</a>
           </li>
-          <li class="blog_categories__list__item blog_categories__list__item--inactive icon--star">
+          <li class="blog_categories__list__item blog_categories__list__item--inactive icon--star-black">
             <a class="blog_categories__list__item__link" href="#">Подборка</a>
           </li>
-          <li class="blog_categories__list__item blog_categories__list__item--inactive icon--chat">
+          <li class="blog_categories__list__item blog_categories__list__item--inactive icon--chat-black">
             <a class="blog_categories__list__item__link" href="#">Новость</a>
           </li>
         </ul>
@@ -221,7 +221,7 @@
           <li class="blog_feed__list__item">
             <a class="blog_feed__list__item__link" href="#">
               <span class="blog_feed__list__item__link__date">11 марта 2021</span>
-              <span class="blog_feed__list__item__link__icon icon--search"></span>
+              <span class="blog_feed__list__item__link__icon icon--search-white"></span>
               <span class="blog_feed__list__item__link__title">Акустика премиум-класса. Что выбрать?</span>
               <img class="blog_feed__list__item__link__image" src="../images/demo/blog/preview.jpg" />
             </a>
@@ -229,7 +229,7 @@
           <li class="blog_feed__list__item">
             <a class="blog_feed__list__item__link" href="#">
               <span class="blog_feed__list__item__link__date">11 марта 2021</span>
-              <span class="blog_feed__list__item__link__icon icon--chat"></span>
+              <span class="blog_feed__list__item__link__icon icon--chat-white"></span>
               <span class="blog_feed__list__item__link__title">Акустика премиум-класса. Что выбрать?</span>
               <img class="blog_feed__list__item__link__image" src="../images/demo/blog/preview.jpg" />
             </a>
@@ -237,7 +237,7 @@
           <li class="blog_feed__list__item">
             <a class="blog_feed__list__item__link" href="#">
               <span class="blog_feed__list__item__link__date">11 марта 2021</span>
-              <span class="blog_feed__list__item__link__icon icon--star"></span>
+              <span class="blog_feed__list__item__link__icon icon--star-white"></span>
               <span class="blog_feed__list__item__link__title">Акустика премиум-класса. Что выбрать?</span>
               <img class="blog_feed__list__item__link__image" src="../images/demo/blog/preview.jpg" />
             </a>
@@ -245,7 +245,7 @@
           <li class="blog_feed__list__item">
             <a class="blog_feed__list__item__link" href="#">
               <span class="blog_feed__list__item__link__date">11 марта 2021</span>
-              <span class="blog_feed__list__item__link__icon icon--navigator"></span>
+              <span class="blog_feed__list__item__link__icon icon--navigator-white"></span>
               <span class="blog_feed__list__item__link__title">Акустика премиум-класса. Что выбрать?</span>
               <img class="blog_feed__list__item__link__image" src="../images/demo/blog/preview.jpg" />
             </a>
@@ -253,7 +253,7 @@
           <li class="blog_feed__list__item">
             <a class="blog_feed__list__item__link" href="#">
               <span class="blog_feed__list__item__link__date">11 марта 2021</span>
-              <span class="blog_feed__list__item__link__icon icon--search"></span>
+              <span class="blog_feed__list__item__link__icon icon--search-white"></span>
               <span class="blog_feed__list__item__link__title">Акустика премиум-класса. Что выбрать?</span>
               <img class="blog_feed__list__item__link__image" src="../images/demo/blog/preview.jpg" />
             </a>
@@ -261,7 +261,7 @@
           <li class="blog_feed__list__item">
             <a class="blog_feed__list__item__link" href="#">
               <span class="blog_feed__list__item__link__date">11 марта 2021</span>
-              <span class="blog_feed__list__item__link__icon icon--search"></span>
+              <span class="blog_feed__list__item__link__icon icon--search-white"></span>
               <span class="blog_feed__list__item__link__title">Акустика премиум-класса. Что выбрать?</span>
               <img class="blog_feed__list__item__link__image" src="../images/demo/blog/preview.jpg" />
             </a>
@@ -269,7 +269,7 @@
           <li class="blog_feed__list__item">
             <a class="blog_feed__list__item__link" href="#">
               <span class="blog_feed__list__item__link__date">11 марта 2021</span>
-              <span class="blog_feed__list__item__link__icon icon--search"></span>
+              <span class="blog_feed__list__item__link__icon icon--search-white"></span>
               <span class="blog_feed__list__item__link__title">Акустика премиум-класса. Что выбрать?</span>
               <img class="blog_feed__list__item__link__image" src="../images/demo/blog/preview.jpg" />
             </a>
@@ -277,7 +277,7 @@
           <li class="blog_feed__list__item">
             <a class="blog_feed__list__item__link" href="#">
               <span class="blog_feed__list__item__link__date">11 марта 2021</span>
-              <span class="blog_feed__list__item__link__icon icon--search"></span>
+              <span class="blog_feed__list__item__link__icon icon--search-white"></span>
               <span class="blog_feed__list__item__link__title">Акустика премиум-класса. Что выбрать?</span>
               <img class="blog_feed__list__item__link__image" src="../images/demo/blog/preview.jpg" />
             </a>
