Блог - страница Инструкция, mobile

--- a/blog-guide.html
+++ b/blog-guide.html
@@ -231,20 +231,20 @@
       <section class="blog_article__banner section wrapper--global">
         <div class="blog_article__banner__container banner__container">
           <div class="banner__container__item">
-            <img class="banner__container__item__image desktop--block" src="./images/demo/blog/banner.jpg" />
-            <img class="banner__container__item__image mobile--block" src="./images/banner-mobile.jpg" />
+            <img class="banner__container__item__image desktop--block" src="./images/demo/blog/hero2.jpeg" />
+            <img class="banner__container__item__image mobile--block" src="./images/demo/blog/hero2.jpeg" />
           </div>
           <div class="banner__container__item">
-            <img class="banner__container__item__image desktop--block" src="./images/demo/blog/banner.jpg" />
-            <img class="banner__container__item__image mobile--block" src="./images/banner-mobile.jpg" />
+            <img class="banner__container__item__image desktop--block" src="./images/demo/blog/hero2.jpeg" />
+            <img class="banner__container__item__image mobile--block" src="./images/demo/blog/hero2.jpeg" />
           </div>
           <div class="banner__container__item">
-            <img class="banner__container__item__image desktop--block" src="./images/demo/blog/banner.jpg" />
-            <img class="banner__container__item__image mobile--block" src="./images/banner-mobile.jpg" />
+            <img class="banner__container__item__image desktop--block" src="./images/demo/blog/hero2.jpeg" />
+            <img class="banner__container__item__image mobile--block" src="./images/demo/blog/hero2.jpeg" />
           </div>
           <div class="banner__container__item">
-            <img class="banner__container__item__image desktop--block" src="./images/demo/blog/banner.jpg" />
-            <img class="banner__container__item__image mobile--block" src="./images/banner-mobile.jpg" />
+            <img class="banner__container__item__image desktop--block" src="./images/demo/blog/hero2.jpeg" />
+            <img class="banner__container__item__image mobile--block" src="./images/demo/blog/hero2.jpeg" />
           </div>
         </div>
       <div class="blog_article__banner__arrows banner__arrows desktop--block">
