Блог - Товар, mobile

--- a/blog-product.html
+++ b/blog-product.html
@@ -225,11 +225,13 @@
 
             <div class="blog_product__container__intro__buy">
               <div class="blog_product__container__intro__buy__prices">
-                <span class="product__buy__prices__current">645 000 ₽</span>
-                <span class="product__buy__prices__old">667 000 ₽</span>
+                <span class="blog_product__container__intro__buy__prices__current">645 000 ₽</span>
+                <span class="blog_product__container__intro__buy__prices__old">667 000 ₽</span>
               </div>
-              <span class="product__buy__add_to_cart button button--pink popup__opener" onclick="openDialog('Cart')();" aria-controls="Cart" alt="Добавить в корзину">Добавить в корзину</span>
-              <span class="product__buy__row2_buttons__favourites"></span>
+              <div class="blog_product__container__intro__buy__buttons">
+                <a class="blog_product__container__intro__buy__buttons__add_to_cart button button--pink popup__opener" href="../product.html">Перейти к товару</a>
+                <span class="blog_product__container__intro__buy__buttons__favourites"></span>
+              </div>
             </div>
           </div>
         </div>
@@ -373,7 +375,7 @@
                     <img class="suggestions__container__list__item__images__link__image" src="./images/goods/gamepad.png" />
                   </a>
                 </div>
-                <div class="suggestions__container__list__item__text">
+                <div class="suggestions__container__list__item__text blog_product__suggestions__container__list__item__text">
                   <a class="suggestions__container__list__item__text__title" href="#">Sony DualSense PS5 Controller, «полуночный черный»</a>
                   <div class="suggestions__container__list__item__text__info">
                     <div class="suggestions__container__list__item__text__info__prices">
@@ -383,11 +385,6 @@
                     <span class="suggestions__container__list__item__text__info__label">Уценка</span>
                   </div>
                 </div>
-                <a class="suggestions__container__list__item__add_to_cart" href="#">
-                  <span class="suggestions__container__list__item__add_to_cart__text">В корзину</span>
-                  <span class="suggestions__container__list__item__add_to_cart__icon icon--add-to-cart-pink"></span>
-                </a>
-                <a class="suggestions__container__list__item__add_to_favourites" href="#heart"></a>
               </li>
               <li class="suggestions__container__list__item">
                 <div class="suggestions__container__list__item__images product-slider">
@@ -395,7 +392,7 @@
                     <img class="suggestions__container__list__item__images__link__image" src="./images/goods/good-face.jpg" />
                   </a>
                 </div>
-                <div class="suggestions__container__list__item__text">
+                <div class="suggestions__container__list__item__text blog_product__suggestions__container__list__item__text">
                   <a class="suggestions__container__list__item__text__title" href="#">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</a>
                   <div class="suggestions__container__list__item__text__info">
                     <div class="suggestions__container__list__item__text__info__prices">
@@ -405,11 +402,6 @@
                     <span class="suggestions__container__list__item__text__info__label">Уценка</span>
                   </div>
                 </div>
-                <a class="suggestions__container__list__item__add_to_cart" href="#">
-                  <span class="suggestions__container__list__item__add_to_cart__text">В корзину</span>
-                  <span class="suggestions__container__list__item__add_to_cart__icon icon--add-to-cart-pink"></span>
-                </a>
-                <a class="suggestions__container__list__item__add_to_favourites" href="#heart"></a>
               </li>
               <li class="suggestions__container__list__item">
                 <div class="suggestions__container__list__item__images">
@@ -417,7 +409,7 @@
                     <img class="suggestions__container__list__item__images__link__image" src="./images/goods/lego.png" />
                   </a>
                 </div>
-                <div class="suggestions__container__list__item__text">
+                <div class="suggestions__container__list__item__text blog_product__suggestions__container__list__item__text">
                   <a class="suggestions__container__list__item__text__title" href="#">LEGO Minifigures Marvel Series 2</a>
                   <div class="suggestions__container__list__item__text__info">
                     <div class="suggestions__container__list__item__text__info__prices">
@@ -426,11 +418,6 @@
                     </div>
                   </div>
                 </div>
-                <a class="suggestions__container__list__item__add_to_cart" href="#">
-                  <span class="suggestions__container__list__item__add_to_cart__text">В корзину</span>
-                  <span class="suggestions__container__list__item__add_to_cart__icon icon--add-to-cart-pink"></span>
-                </a>
-                <a class="suggestions__container__list__item__add_to_favourites" href="#heart"></a>
               </li>
               <li class="suggestions__container__list__item">
                 <div class="suggestions__container__list__item__images">
@@ -438,7 +425,7 @@
                     <img class="suggestions__container__list__item__images__link__image" src="./images/goods/case.png" />
                   </a>
                 </div>
-                <div class="suggestions__container__list__item__text">
+                <div class="suggestions__container__list__item__text blog_product__suggestions__container__list__item__text">
                   <a class="suggestions__container__list__item__text__title" href="#">Чехол Apple MagSafe для iPhone 12/12 Pro, кожа, золотисто-коричневый</a>
                   <div class="suggestions__container__list__item__text__info">
                     <div class="suggestions__container__list__item__text__info__prices">
@@ -447,11 +434,6 @@
                     </div>
                   </div>
                 </div>
-                <a class="suggestions__container__list__item__add_to_cart" href="#">
-                  <span class="suggestions__container__list__item__add_to_cart__text">В корзину</span>
-                  <span class="suggestions__container__list__item__add_to_cart__icon icon--add-to-cart-pink"></span>
-                </a>
-                <a class="suggestions__container__list__item__add_to_favourites" href="#heart"></a>
               </li>
               <li class="suggestions__container__list__item">
                 <div class="suggestions__container__list__item__images">
@@ -459,7 +441,7 @@
                     <img class="suggestions__container__list__item__images__link__image" src="./images/goods/vinil.png" />
                   </a>
                 </div>
-                <div class="suggestions__container__list__item__text">
+                <div class="suggestions__container__list__item__text blog_product__suggestions__container__list__item__text">
                   <a class="suggestions__container__list__item__text__title" href="#">Sony PS-LX310BT</a>
                   <div class="suggestions__container__list__item__text__info">
                     <div class="suggestions__container__list__item__text__info__prices">
@@ -469,11 +451,6 @@
                     <span class="suggestions__container__list__item__text__info__label">Уценка</span>
                   </div>
                 </div>
-                <a class="suggestions__container__list__item__add_to_cart" href="#">
-                  <span class="suggestions__container__list__item__add_to_cart__text">В корзину</span>
-                  <span class="suggestions__container__list__item__add_to_cart__icon icon--add-to-cart-pink"></span>
-                </a>
-                <a class="suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
               </li>
               <li class="suggestions__container__list__item">
                 <div class="suggestions__container__list__item__images">
@@ -481,7 +458,7 @@
                     <img class="suggestions__container__list__item__images__link__image" src="./images/goods/vinil.png" />
                   </a>
                 </div>
-                <div class="suggestions__container__list__item__text">
+                <div class="suggestions__container__list__item__text blog_product__suggestions__container__list__item__text">
                   <a class="suggestions__container__list__item__text__title" href="#">Sony PS-LX310BT</a>
                   <div class="suggestions__container__list__item__text__info">
                     <div class="suggestions__container__list__item__text__info__prices">
@@ -490,11 +467,6 @@
                     </div>
                   </div>
                 </div>
-                <a class="suggestions__container__list__item__add_to_cart" href="#">
-                  <span class="suggestions__container__list__item__add_to_cart__text">В корзину</span>
-                  <span class="suggestions__container__list__item__add_to_cart__icon icon--add-to-cart-pink"></span>
-                </a>
-                <a class="suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
               </li>
               <li class="suggestions__container__list__item">
                 <div class="suggestions__container__list__item__images">
@@ -502,7 +474,7 @@
                     <img class="suggestions__container__list__item__images__link__image" src="./images/goods/vinil.png" />
                   </a>
                 </div>
-                <div class="suggestions__container__list__item__text">
+                <div class="suggestions__container__list__item__text blog_product__suggestions__container__list__item__text">
                   <a class="suggestions__container__list__item__text__title" href="#">Sony PS-LX310BT</a>
                   <div class="suggestions__container__list__item__text__info">
                     <div class="suggestions__container__list__item__text__info__prices">
@@ -511,11 +483,6 @@
                     </div>
                   </div>
                 </div>
-                <a class="suggestions__container__list__item__add_to_cart" href="#">
-                  <span class="suggestions__container__list__item__add_to_cart__text">В корзину</span>
-                  <span class="suggestions__container__list__item__add_to_cart__icon icon--add-to-cart-pink"></span>
-                </a>
-                <a class="suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
               </li>
             </ul>
           <div class="suggestions__container__arrows arrows carousel_alike__arrows">
